# specado-rust

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  RELEASING.md
.github/: release-notes-template.md
.github/actions/setup-rust-env/: action.yml
.github/workflows/: ci.yml  publish-node.yml  publish-python.yml  release.yml  version-bump.yml
docs/: INDEX.md  KNOWLEDGE_BASE.md  ci-cd.md  nodejs-api.md  python-api.md  rust-core-api.md
specado-core/: Cargo.toml
specado-core/examples/: capability_usage.rs  test_json_transform.rs  week1_demo.rs  week2_retry_demo.rs  week2_routing_demo.rs
specado-core/src/: lib.rs
specado-core/src/capabilities/: comparison.rs  constraints.rs  ffi.rs  mod.rs  modality.rs  provider_manifest.rs
specado-core/src/config/: env.rs  error.rs  mod.rs  schema.rs  secrets.rs  validator.rs
specado-core/src/http/: client.rs  error.rs  mod.rs
specado-core/src/protocol/: README.md  mod.rs  types.rs
specado-core/src/providers/: README.md  adapter.rs  anthropic.rs  error.rs  json_transform.rs  mod.rs  openai.rs  rate_limit.rs  retry.rs  routing.rs  transform.rs
specado-core/src/providers/openai/: client.rs  converter.rs  mod.rs  streaming.rs  types.rs
specado-core/tests/: capabilities_test.rs  config_tests.rs  ffi_capabilities_test.c  http_client_tests.rs  http_integration.rs  openai_provider_tests.rs  protocol_builder_tests.rs  protocol_tests.rs  retry_tests.rs  routing_tests.rs  secret_serialization_test.rs  transformation_tests.rs  week1_demo.rs
specado-node/: CHANGELOG.md  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  test_capabilities.js  test_specado.js
specado-node/scripts/: verify-build.js
specado-node/src/: lib.rs
specado-python/: CHANGELOG.md  Cargo.toml  PYO3_UPGRADE_NOTES.md  README.md  pyproject.toml  test_capabilities.py  test_pyo3_upgrade.py  test_specado.py
specado-python/examples/: week2_demo.py
specado-python/python/specado/: __init__.py
specado-python/scripts/: verify-build.sh
specado-python/src/: capabilities.rs  lib.rs
specado-python/tests/: test_bindings.py
