[package]
name = "specado-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for spec-driven LLM integration"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_yaml = "0.9"
regex = "1.10"
url = "2.5"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
eventsource-stream = "0.2"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
test-case = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3.8"
