[package]
name = "specado-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for spec-driven LLM integration"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_yaml = "0.9"
regex = "1.11"
url = "2.5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
uuid = { version = "1.12", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
test-case = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3.8"
