[package]
name = "specado-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Node.js bindings for Specado"

[lib]
crate-type = ["cdylib"]

[dependencies]
specado-core = { path = "../specado-core" }
napi = { version = "2.16", features = ["napi8"] }
napi-derive = "2.16"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
napi-build = "2.0"

[dev-dependencies]
criterion = { workspace = true }

[profile.release]
lto = true