[package]
name = "specado-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Node.js bindings for Specado"

[lib]
crate-type = ["cdylib"]

[dependencies]
specado-core = { path = "../specado-core" }
napi = { version = "3.2.3", features = ["napi8", "tokio_rt"] }
napi-derive = "3.2.3"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
napi-build = "2.1.1"

[dev-dependencies]
criterion = { workspace = true }
