[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "specado"
description = "Spec-driven LLM integration library with automatic fallback routing and provider transformations"
authors = [
    { name = "Specado Contributors", email = "team@specado.dev" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = [
    "llm", "artificial-intelligence", "openai", "anthropic", "api", 
    "routing", "fallback", "transformation", "chat-completion"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/specado/specado"
Repository = "https://github.com/specado/specado"
Documentation = "https://docs.specado.com"
Issues = "https://github.com/specado/specado/issues"
Changelog = "https://github.com/specado/specado/blob/main/specado-python/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.maturin]
# Build for Python 3.9+ with abi3
python-source = "python"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests", "test_*.py"]
python_files = ["test_*.py", "*_test.py"]
